--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
         "popper.js": "^1.16.1",
         "postcss": "^8.3.0",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.33.0",
+        "sass": "^1.34.0",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
         "vue-axios": "^3.2.4",
         "vue-router": "^3.5.1"
     }
