--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "devDependencies": {
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.3.0",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.34.0",
+        "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.7",
@@ -26,7 +26,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "js-cookie": "^2.2.1",
         "vue-axios": "^3.2.4",
-        "vue-router": "^3.5.1"
+        "vue-router": "^3.5.1",
+        "webpack": "^5.37.1"
     }
 }
